--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,14 @@ h1 {
   text-align: center;
 }
 
+canvas {
+  display: flex;
+  margin: 0 auto;
+  border: solid 4px rgb(0,0,0);
+  border-radius: 10px;
+  background-color: white;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
